--- a/src/style.css
+++ b/src/style.css
@@ -45,11 +45,14 @@ header .containerItemList ul {
 
 }
 
-header .containerItemList ul li {
+header .containerItemList ul li a{
     text-decoration: none;
-
+    font-size: 1rem;
     margin: 0 0 0 50px;
     color: var(--color-txt-nav);
+}
+header .containerItemList ul li a:hover{
+  color: rgb(92, 76, 122);
 }
 
 /* containerCart */
