--- a/src/styles/cardItem.css
+++ b/src/styles/cardItem.css
@@ -68,8 +68,8 @@
 
 .buttons #detalles {
     height: 55px;
-    width: 75%;
-    border-radius: 50px;
+    width: 80%;
+    border-radius: 24%;
     background-color: #5b00fb;
     color: white;
     font-size: 20px;
